--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-icons": "^3.10.0",
+    "react-scripts": "2.1.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "dev": "react-scripts start",
